# cs344Update

./: README.md
Lesson Code Snippets/Lesson 2 Code Snippets/: atomics.cu
Lesson Code Snippets/Lesson 3 Code Snippets/: scan.cu
Problem Sets/Problem Set 1/: CMakeLists.txt  HW1.cpp  compare.cpp  student_func.cu
Problem Sets/Problem Set 2/: Makefile  main.cpp  student_func.cu
Problem Sets/Problem Set 3/: CMakeLists.txt  Makefile  student_func.cu
Problem Sets/Problem Set 4/: CMakeLists.txt  Makefile  main.cpp  student_func.cu  utils.h
Solutions/Lesson 2 Code Snippets/: atomics.cu
Solutions/Lesson Code Snippets/Lesson 3 Code Snippets/: scan.cu
Solutions/Problem Sets/Problem Set 1/: main.cpp  student_func.cu
Solutions/Problem Sets/Problem Set 2/: CMakeLists.txt  student_func.cu
Solutions/Problem Sets/Problem Set 2/Problem Set 2/: student_func.cu
Solutions/Problem Sets/Problem Set 3/: reference_calc.cpp  student_func.cu
Solutions/Problem Sets/Problem Set 4/: compare.cpp  student_func.cu
